--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -68,17 +68,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tutorial Guide\n",
+    "## About These Directories and Files...\n",
     "\n",
     "This directory contains files for setting up your environment (`README.md`, `environment.yml`, and `requirements.txt`), and the Apache license file (`LICENSE`).\n",
     "\n",
     "The `util` directory contains library code used in the notebooks and the `images` directory contains images used in the notebooks.\n",
     "\n",
-    "Each tutorial _module_ is contained in a dedicated directory. Each  [Jupyter](https://jupyterlab.readthedocs.io/en/stable/) notebook in a module is a _lesson_. The notebooks follow the naming convention `NN-name.ipynb`, where `NN` is a number that indicates the ordering of lessons. \n",
+    "The `reference` directory contains reference materials, like notebooks with tips, tricks, and troubleshooting information.\n",
     "\n",
-    "> **Note:** If two or more notebooks have the same `NN` number, it indicates they can be studied an arbitrary order.\n",
+    "Each tutorial is contained in a dedicated directory. Each [Jupyter](https://jupyterlab.readthedocs.io/en/stable/) notebook in a module is a _lesson_. The notebooks follow the naming convention `NN-name.ipynb`, where `NN` is a number that indicates the ordering of lessons. \n",
     "\n",
-    "Let's discuss the modules in this tutorial, which are organized in subdirectories."
+    "> **Note:** If two or more notebooks have the same `NN` number or no numbers, it indicates they can be studied an arbitrary order.\n",
+    "\n",
+    "Let's discuss how to decide which tutorials and lessons are right for you, then provide more details on each tutorial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to Use These Tutorials\n",
+    "\n",
+    "TODO - a concise navigation guide."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tutorial Descriptions\n",
+    "\n",
+    "The rest of this notebook describes each tutorial in more depth, with links to all the lesson notebooks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reference\n",
+    "\n",
+    "Directory: `reference`\n",
+    "\n",
+    "The notebooks here provide reference material, like general tips and tricks, how to get help, and troubleshooting issues.\n",
+    "\n",
+    "| Lesson (Notebook)                                            | Description                                               |\n",
+    "| :----------------------------------------------------------- | :-------------------------------------------------------- |\n",
+    "| [Troubleshooting, Tips, and Tricks](reference/Troubleshooting-Tips-Tricks.ipynb) | How to troubleshoot common problems and other useful tips and tricks. |"
    ]
   },
   {
@@ -91,20 +126,20 @@
     "\n",
     "Start here if you want the quickest introduction to the Ray API. The notebooks in this folder walk through non-trivial examples of Ray _tasks_ and _actors_, which make it painless to scale applications from a laptop to a cluster.\n",
     "\n",
-    "| Lesson                                                       | Description                                      |\n",
-    "| :----------------------------------------------------------- | :----------------------------------------------- |\n",
-    "| [00 Overview](crash-course/00-Overview.ipynb)                | Introduction to this tutorial.                   |\n",
-    "| [01 Ray Tasks](crash-course/01-RayCrashCourse-Tasks.ipynb)   | Accelerating _stateless_ work with Ray _tasks_.  |\n",
-    "| [02 Ray Actors](crash-course/02-RayCrashCourse-Actors.ipynb) | Intuitive distributed _state_ with Ray _actors_. |\n",
+    "| Lesson (Notebook)                                              | Description                                               |\n",
+    "| :------------------------------------------------------------- | :-------------------------------------------------------- |\n",
+    "| [00 Overview](crash-course/00-Ray-Crash-Course-Overview.ipynb) | Introduction to this tutorial.                            |\n",
+    "| [01 Ray Tasks](crash-course/01-Ray-Crash-Course-Tasks.ipynb)   | Scaling _stateless_ work using Ray _tasks_.               |\n",
+    "| [02 Ray Actors](crash-course/02-Ray-Crash-Course-Actors.ipynb) | Scaling work with distributed _state_ using Ray _actors_. |\n",
     "\n",
     "After going through these notebooks, proceed to any of the following tutorials:\n",
     "\n",
-    "| Module                                                   | Description                                         |\n",
-    "| :------------------------------------------------------- | :-------------------------------------------------- |\n",
-    "| [Ray Core - A Deeper Dive](ray-core/00-Overview.ipynb)   | More about the Ray API and how it works internally. |\n",
-    "| [Ray RLlib](ray-rllib/00-Overview.ipynb)                 | Reinforcement Learning library built on Ray.        |\n",
-    "| [Ray Tune](ray-tune/00-Overview.ipynb)                   | Hyperparameter Tuning library built on Ray.         |\n",
-    "| [Ray Serve](ray-serve/00-Overview.ipynb)                 | Model Serving library built on Ray.                 |\n",
+    "| Module                                                          | Description                                         |\n",
+    "| :-------------------------------------------------------------- | :-------------------------------------------------- |\n",
+    "| [Ray Core - A Deeper Dive](ray-core/00-Ray-Core-Overview.ipynb) | More about the Ray API and how it works internally. |\n",
+    "| [Ray RLlib](ray-rllib/00-Ray-RLlib-Overview.ipynb)              | Reinforcement Learning library built on Ray.        |\n",
+    "| [Ray Tune](ray-tune/00-Ray-Tune-Overview.ipynb)                 | Hyperparameter Tuning library built on Ray.         |\n",
+    "| [Ray Serve](ray-serve/00-Ray-Serve-Overview.ipynb)              | Model Serving library built on Ray.                 |\n",
     "\n",
     "More tutorials will be added soon."
    ]
@@ -123,13 +158,12 @@
     "\n",
     "| Lesson | Description |\n",
     "| :----- | :---------- |\n",
-    "| [00 Overview](ray-core/00-Overview.ipynb) | Introduction to this tutorial. |\n",
-    "| [01 Why Ray?](ray-core/01-WhyRay.ipynb)   | Why was Ray created? What problems does it solve? |\n",
-    "| [02 Task Parallelism - Part1](ray-core/02-TaskParallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
-    "| [03 Task Parallelism - Part2](ray-core/03-TaskParallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
-    "| [04 Distributed State with Actors](ray-core/04-DistributedStateWithActors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
-    "| [05 Exploring Ray API Calls](ray-core/05-ExploringRayAPICalls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional module. We'll also look at options you can pass to the API calls we've already learned. |\n",
-    "| [06-Recap Tips and Tricks](ray-core/06-RecapAndTipsTricks.ipynb) | The final lesson recaps what we've learned and summarizes the tips and tricks we've covered, plus adds a few more. |\n"
+    "| [00 Overview](ray-core/00-Ray-Core-Overview.ipynb) | Introduction to this tutorial. |\n",
+    "| [01 Why Ray?](ray-core/01-Why-Ray.ipynb)  | Why was Ray created? What problems does it solve? |\n",
+    "| [02 Task Parallelism - Part1](ray-core/02-Task-Parallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
+    "| [03 Task Parallelism - Part2](ray-core/03-Task-Parallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
+    "| [04 Distributed State with Actors](ray-core/04-Distributed-State-With-Actors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
+    "| [05 Exploring Ray API Calls](ray-core/05-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional module. We'll also look at options you can pass to the API calls we've already learned. |"
    ]
   },
   {
@@ -169,19 +203,6 @@
     "_Ray Serve_ is Ray's system for scalable _model serving_, with capabilities that also make it suitable for other web server applications. This module starts with an explanation of what's required in model serving, followed by a tour of the API with examples.\n",
     "\n",
     "This module will be released soon."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Troubleshooting\n",
-    "\n",
-    "When you first start Ray in the very first lesson (i.e., use `ray.init()`), you may run into a few issues:\n",
-    "\n",
-    "1. If you get an error like `... INFO services.py:... -- Failed to connect to the redis server, retrying.`, it probably means you are running a VPN on your machine. [At this time](https://github.com/ray-project/ray/issues/6573), you can't use `ray.init()` with a VPN running. You'll have to stop your VPN for now.\n",
-    "\n",
-    "2. If `ray.init()` worked (for example, you see a message like _View the Ray dashboard at localhost:8265_) and you're using a Mac, you may get several annoying dialogs asking you if you want to allow incoming connections for Python and/or Redis. Click \"Accept\" for each one and they shouldn't appear again during this tutorial. MacOS is trying to verify if these executables have been properly signed. Ray uses Redis. If you installed Python using Anaconda or other mechanism, then it probably isn't properly signed from the point of view of MacOS. To permanently fix this problem, [see this StackExchange post](https://apple.stackexchange.com/questions/3271/how-to-get-rid-of-firewall-accept-incoming-connections-dialog). "
    ]
   }
  ],
