--- a/reference/Troubleshooting-Tips-Tricks.ipynb
+++ b/reference/Troubleshooting-Tips-Tricks.ipynb
@@ -4,9 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recap, Tips, and Tricks\n",
+    "# Troubleshooting, Tips, and Tricks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting Help\n",
     "\n",
-    "This short lesson recaps what we've learned. It also expands on a few techniques covered in the previous lessons."
+    "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com)\n",
+    "* [Email](mailto:academy@anyscale.com)\n",
+    "\n",
+    "Find an issue? Please report it!\n",
+    "\n",
+    "* [GitHub issues](https://github.com/anyscale/academy/issues)"
    ]
   },
   {
@@ -29,6 +41,21 @@
     "    * [ray-dev mailing list](https://groups.google.com/forum/?nomobile=true#!forum/ray-dev)\n",
     "    * [@raydistributed](https://twitter.com/raydistributed)\n",
     "    * [@anyscalecompute](https://twitter.com/anyscalecompute)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Troubleshooting\n",
+    "\n",
+    "### ray.init() Fails\n",
+    "\n",
+    "If you get an error like `... INFO services.py:... -- Failed to connect to the redis server, retrying.`, it probably means you are running a VPN on your machine. [At this time](https://github.com/ray-project/ray/issues/6573), you can't use `ray.init()` with a VPN running. You'll have to stop your VPN to run `ray.init()`, then once it finishes, you can restart your VPN.\n",
+    "\n",
+    "### Annoyances\n",
+    "\n",
+    "If `ray.init()` worked (for example, you see a message like _View the Ray dashboard at localhost:8265_) and you're using a Mac, you may get several annoying dialogs asking you if you want to allow incoming connections for `python` and/or `redis-server`. Click \"Accept\" for each one and they shouldn't appear again during this lesson. MacOS is trying to verify if these executables have been properly signed. Ray uses Redis. If you installed Python using Anaconda or other mechanism, then it probably isn't properly signed from the point of view of MacOS. To permanently fix this problem, [see this StackExchange post](https://apple.stackexchange.com/questions/3271/how-to-get-rid-of-firewall-accept-incoming-connections-dialog)."
    ]
   },
   {
@@ -178,7 +205,7 @@
    "source": [
     "## Using Libraries\n",
     "\n",
-    "If tasks or actors call (or subclass) library code in your project and that code isn't in a subdirectory of the driver, make sure that the process starting Ray has the correct `PYTHONPATH` set to the library location. For example,\n",
+    "If tasks or actors call (or subclass) library code in your project and that code isn't in a _subdirectory_ of the driver script, make sure that the process starting Ray has the correct `PYTHONPATH` set to the library location. For example,\n",
     "\n",
     "```python\n",
     "PYTHONPATH=$PYTHONPATH:/path/to/library python MyRayAppDriver.py\n",
@@ -189,27 +216,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cleaning Up Actors\n",
+    "## Cleaning Up\n",
     "\n",
-    "Working in a constrained environment, you my find it useful to kill actors that are no longer needed, but still have references to them, such as in notebooks. More information is in the docs for [ray.kill()](https://ray.readthedocs.io/en/latest/package-ref.html#ray.kill).\n",
+    "When your driver script exists, it will implicitly call `ray.shutdown()`. This can be useful to do explicitly if you want to restart Ray, for example, in a notebook environment. For example:\n",
     "\n",
-    "* `ray.kill(actor_id)`: Terminate abruptly\n",
-    "* `actor_id.__ray_terminate__.remote()`: Clean up with a nicer termination"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Debugging and Troubleshooting\n",
-    "\n",
-    "### ray.init() Fails\n",
-    "\n",
-    "If you get an error like `... INFO services.py:... -- Failed to connect to the redis server, retrying.`, it probably means you are running a VPN on your machine. [At this time](https://github.com/ray-project/ray/issues/6573), you can't use `ray.init()` with a VPN running. You'll have to stop your VPN to run `ray.init()`, then once it finishes, you can restart your VPN.\n",
-    "\n",
-    "### Annoyances\n",
-    "\n",
-    "If `ray.init()` worked (for example, you see a message like _View the Ray dashboard at localhost:8265_) and you're using a Mac, you may get several annoying dialogs asking you if you want to allow incoming connections for `python` and/or `redis-server`. Click \"Accept\" for each one and they shouldn't appear again during this lesson. MacOS is trying to verify if these executables have been properly signed. Ray uses Redis. If you installed Python using Anaconda or other mechanism, then it probably isn't properly signed from the point of view of MacOS. To permanently fix this problem, [see this StackExchange post](https://apple.stackexchange.com/questions/3271/how-to-get-rid-of-firewall-accept-incoming-connections-dialog)."
+    "```python\n",
+    "ray.shutdown()\n",
+    "ray.init(...)\n",
+    "```"
    ]
   }
  ],
