--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -20,7 +20,7 @@
      "data": {
       "text/html": [
        "<style>\n",
-       "table {margin-left: 0 !important;}\n",
+       "    table {margin-left: 0 !important;}\n",
        "</style>\n"
       ],
       "text/plain": [
@@ -32,9 +32,9 @@
     }
    ],
    "source": [
-    "%%html\n",
+    "%%html \n",
     "<style>\n",
-    "table {margin-left: 0 !important;}\n",
+    "    table {margin-left: 0 !important;}\n",
     "</style>"
    ]
   },
@@ -61,35 +61,46 @@
     "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com)\n",
     "* [Email](mailto:academy@anyscale.com)\n",
     "\n",
-    "Troubleshooting tips are offered in known areas where you might encounter issues. All are summarized in [lesson 6](ray-core/06-RecapTipsTricks.ipynb) in the _Ray Core_ tutorial."
+    "Troubleshooting tips are offered in known areas where you might encounter issues. All are summarized in the [_Troubleshooting, Tips, and Tricks notebook_](reference/Troubleshooting-Tips-Tricks.ipynb). For the details of the Ray API and the ML libraries, see the [Ray Docs](https://docs.ray.io/en/latest/)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## About These Directories and Files...\n",
+    "## Which Tutorials Are Right for Me?\n",
     "\n",
-    "This directory contains files for setting up your environment (`README.md`, `environment.yml`, and `requirements.txt`), and the Apache license file (`LICENSE`).\n",
+    "Here is a recommended reading list, based on your interests:\n",
     "\n",
-    "The `util` directory contains library code used in the notebooks and the `images` directory contains images used in the notebooks.\n",
+    "| You Are... | Best Tutorials |\n",
+    "| :--------- | :------------- |\n",
+    "| A developer who is new to Ray | First, [_Ray Crash Course_](#user-content-ray-crash-course), then [_Ray Core - Advanced_](#user-content-ray-core---advanced) |\n",
+    "| A developer who is experienced with Ray | [_Ray Core - Advanced_](#user-content-ray-core---advanced) |\n",
+    "| A developer or data scientist interested in Reinforcement Learning | [_Ray RLlib_](#user-content-ray-rllib) |\n",
+    "| A developer or data scientist interested in Hyperparameter Tuning  | [_Ray Tune_](#user-content-ray-tune) |\n",
+    "| A developer or data scientist interested in accelerated model training with PyTorch  | [_Ray SGD_](#user-content-ray-sgd) |\n",
+    "| A developer or data scientist interested in model serving | [_Ray Serve_](#user-content-ray-serve) |\n",
     "\n",
-    "The `reference` directory contains reference materials, like notebooks with tips, tricks, and troubleshooting information.\n",
-    "\n",
-    "Each tutorial is contained in a dedicated directory. Each [Jupyter](https://jupyterlab.readthedocs.io/en/stable/) notebook in a module is a _lesson_. The notebooks follow the naming convention `NN-name.ipynb`, where `NN` is a number that indicates the ordering of lessons. \n",
-    "\n",
-    "> **Note:** If two or more notebooks have the same `NN` number or no numbers, it indicates they can be studied an arbitrary order.\n",
-    "\n",
-    "Let's discuss how to decide which tutorials and lessons are right for you, then provide more details on each tutorial."
+    "> **Note:** Older Ray tutorials can be found in the [this repo](https://github.com/ray-project/tutorial). They cover topics not yet covered by the Anyscale Academy."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to Use These Tutorials\n",
+    "## Tutorial Descriptions\n",
     "\n",
-    "TODO - a concise navigation guide."
+    "Let's explore each tutorial.\n",
+    "\n",
+    "### This Directory\n",
+    "\n",
+    "First, the root directory contains files for setting up your environment (`README.md` - this file, `environment.yml`, and `requirements.txt`), as discussed previoiusly, and the Apache license file (`LICENSE`). The `util` and the `images` directories contain library code and images used in the notebooks, respectively. (Each tutorial directory discussed below may also have supporting code files.) There is also a `reference` directory with notebooks and other materials you might find useful.\n",
+    "\n",
+    "Each tutorial is contained in a dedicated directory. Each [Jupyter](https://jupyterlab.readthedocs.io/en/stable/) notebook is a _lesson_. The notebooks follow the naming convention `NN-name.ipynb`, where `NN` is a number that indicates the ordering of the lessons.\n",
+    "\n",
+    "> **Note:** If two or more notebooks have the same `NN` number, it indicates they can be studied in arbitrary order.\n",
+    "\n",
+    "The tutorials are organized in subdirectories."
    ]
   },
   {
@@ -120,50 +131,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Crash Course\n",
+    "### Ray Crash Course\n",
     "\n",
-    "Directory: `crash-course`\n",
+    "| About | Details |\n",
+    "| :----- | :------------ |\n",
+    "| _Directory:_ | `ray-crash-course` |\n",
+    "| _Audience:_ | You are a developer who wants a fast introduction to the core Ray API. Experienced developers should go to [_Ray Core - Advanced_](#user-content-ray-core---advanced). Data scientists may wish to skip to [_Ray RLlib_](#user-content-ray-rllib), [_Ray Tune_](#user-content-ray-tune), [_Ray SGD_](#user-content-ray-sgd), or [_Ray Serve_](#user-content-ray-serve). |\n",
     "\n",
-    "Start here if you want the quickest introduction to the Ray API. The notebooks in this folder walk through non-trivial examples of Ray _tasks_ and _actors_, which make it painless to scale applications from a laptop to a cluster.\n",
     "\n",
-    "| Lesson (Notebook)                                              | Description                                               |\n",
-    "| :------------------------------------------------------------- | :-------------------------------------------------------- |\n",
-    "| [00 Overview](crash-course/00-Ray-Crash-Course-Overview.ipynb) | Introduction to this tutorial.                            |\n",
-    "| [01 Ray Tasks](crash-course/01-Ray-Crash-Course-Tasks.ipynb)   | Scaling _stateless_ work using Ray _tasks_.               |\n",
-    "| [02 Ray Actors](crash-course/02-Ray-Crash-Course-Actors.ipynb) | Scaling work with distributed _state_ using Ray _actors_. |\n",
+    "This is the place to start if you are new to Ray and you plan to use it to scale Python applications to a cluster. Data scientists working with Ray-based toolkits, like _RLlib_, don't need this knowledge to get started.\n",
     "\n",
-    "After going through these notebooks, proceed to any of the following tutorials:\n",
+    "The _crash course_ is intended to focus on learning the core API as quickly as possible, but using nontrivial examples. In contrast, the [_Ray Core - Advanced_](#user-content-ray-core---advanced) tutorial begins with an explanation of why Ray was created, what problems it solves, and then dives into more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
     "\n",
-    "| Module                                                          | Description                                         |\n",
-    "| :-------------------------------------------------------------- | :-------------------------------------------------- |\n",
-    "| [Ray Core - A Deeper Dive](ray-core/00-Ray-Core-Overview.ipynb) | More about the Ray API and how it works internally. |\n",
-    "| [Ray RLlib](ray-rllib/00-Ray-RLlib-Overview.ipynb)              | Reinforcement Learning library built on Ray.        |\n",
-    "| [Ray Tune](ray-tune/00-Ray-Tune-Overview.ipynb)                 | Hyperparameter Tuning library built on Ray.         |\n",
-    "| [Ray Serve](ray-serve/00-Ray-Serve-Overview.ipynb)              | Model Serving library built on Ray.                 |\n",
+    "| #  | Lesson | Description |\n",
+    "| :- | :----- | :---------- |\n",
+    "| 00 | [Overview](ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
+    "| 01 | [Ray Crash Course: Tasks](ray-crash-course/01-Ray-Crash-Course-Tasks.ipynb) | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
+    "| 02 | [Ray Crash Course: Actors](ray-crash-course/02-Ray-Crash-Course-Actors.ipynb) | Understanding how Ray converts normal Python classes into distributed, _stateful actors_. |\n",
     "\n",
-    "More tutorials will be added soon."
+    "Once you've completed this tutorial, go through [_Ray Core - Advanced_](#user-content-ray-core---advanced) or explore one of the ML-related library tutorials, in any order."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ray Core - A Deeper Dive\n",
+    "### Ray Advanced\n",
     "\n",
-    "Directory: `ray-core`\n",
+    "Directory: `ray-advanced`\n",
     "\n",
     "This tutorial provides a deeper introduction to Ray's core API. It also explores why Ray was created, what problems it is designed to solve, and how it works behind the scenes.\n",
     "\n",
     "This tutorial assumes you've gone through the Once you've completed the Ray core material, you can explore the rest of the modules in any order.\n",
     "\n",
-    "| Lesson | Description |\n",
-    "| :----- | :---------- |\n",
-    "| [00 Overview](ray-core/00-Ray-Core-Overview.ipynb) | Introduction to this tutorial. |\n",
-    "| [01 Why Ray?](ray-core/01-Why-Ray.ipynb)  | Why was Ray created? What problems does it solve? |\n",
-    "| [02 Task Parallelism - Part1](ray-core/02-Task-Parallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
-    "| [03 Task Parallelism - Part2](ray-core/03-Task-Parallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
-    "| [04 Distributed State with Actors](ray-core/04-Distributed-State-With-Actors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
-    "| [05 Exploring Ray API Calls](ray-core/05-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional module. We'll also look at options you can pass to the API calls we've already learned. |"
+    "| #  | Lesson | Description |\n",
+    "| :- | :----- | :---------- |\n",
+    "| 00 | [Overview](ray-advanced/00-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
+    "| 01 | [Introduction](ray-advanced/01-Introduction.ipynb) | Start in this notebook if you want an explanation of the origin and motivations for Ray. |\n",
+    "| 02 | [Task Parallelism - Part1](ray-advanced/02-TaskParallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
+    "| 03 | [Task Parallelism - Part2](ray-advanced/03-TaskParallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
+    "| 04 | [Distributed State with Actors](ray-advanced/04-DistributedStateWithActors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
+    "| 05 | [Exploring Ray API Calls](ray-advanced/05-ExploringRayAPICalls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. We'll also look at options you can pass to the API calls we've already learned. |\n",
+    "| 06 | [Recap Tips and Tricks](ray-advanced/06-RecapAndTipsTricks.ipynb) | The final lesson recaps what we've learned and summarizes the tips and tricks we've covered, plus adds a few more. |"
    ]
   },
   {
@@ -174,22 +183,35 @@
     "\n",
     "Directory: `ray-rllib`\n",
     "\n",
-    "_Ray RLlib_ is Ray's system for _reinforcement learning_. This module begins with a \"crash course\" in RL concepts. It then explores several of the commonly-used algorithms and approaches for different applications.\n",
+    "_Ray RLlib_ is Ray's system for _reinforcement learning_. This tutorial begins with a \"crash course\" in RL concepts. It then explores several of the commonly-used algorithms and approaches for different applications.\n",
     "\n",
-    "This module will be released soon."
+    "This tutorial will be released soon."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ray Tune and Ray SGD\n",
+    "### Ray Tune\n",
     "\n",
     "Directory: `ray-tune`\n",
     "\n",
-    "_Ray Tune_ is Ray's system for _hyperparameter tuning_. This module starts with an explanation of what hyperparameter tuning is for and the performances challenges doing it for many applications. Then the module explores how to use _Tune_, how it integrates with several popular ML frameworks, and the algorithms supported in _Tune_. The new _Ray SGD_ module is also covered.\n",
+    "_Ray Tune_ is Ray's system for _hyperparameter tuning_. This tutorial starts with an explanation of what hyperparameter tuning is for and the performances challenges doing it for many applications. Then the tutorial explores how to use _Tune_, how it integrates with several popular ML frameworks, and the algorithms supported in _Tune_.\n",
     "\n",
-    "This module will be released soon."
+    "This tutorial will be released soon."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ray SGD\n",
+    "\n",
+    "Directory: `ray-sgd`\n",
+    "\n",
+    "_Ray SGD_ is a tool to more easily exploit a cluster to perform training with _Stochastic Gradient Descent_ using PyTorch (TensorFlow support forthcoming).\n",
+    "\n",
+    "This tutorial will be released soon."
    ]
   },
   {
@@ -200,10 +222,17 @@
     "\n",
     "Directory: `ray-serve`\n",
     "\n",
-    "_Ray Serve_ is Ray's system for scalable _model serving_, with capabilities that also make it suitable for other web server applications. This module starts with an explanation of what's required in model serving, followed by a tour of the API with examples.\n",
+    "_Ray Serve_ is Ray's system for scalable _model serving_, with capabilities that also make it suitable for other web server applications. This tutorial starts with an explanation of what's required in model serving, followed by a tour of the API with examples.\n",
     "\n",
-    "This module will be released soon."
+    "This tutorial will be released soon."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
