--- a/ray-advanced/00-Ray-Advanced-Overview.ipynb
+++ b/ray-advanced/00-Ray-Advanced-Overview.ipynb
@@ -9,14 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style>\n",
-       "table {margin-left: 0 !important;}\n",
+       "    table {margin-left: 0 !important;}\n",
        "</style>\n"
       ],
       "text/plain": [
@@ -28,9 +32,9 @@
     }
    ],
    "source": [
-    "%%html\n",
+    "%%html \n",
     "<style>\n",
-    "table {margin-left: 0 !important;}\n",
+    "    table {margin-left: 0 !important;}\n",
     "</style>"
    ]
   },
@@ -40,7 +44,7 @@
    "source": [
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
-    "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), picks up where the [Crash Course](../crash-course/00-Overview.ipynb) left off. It explores the rest of the core [Ray](https://ray.io) API ([documentation](https://ray.readthedocs.io/en/latest/package-ref.html)).\n",
+    "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), picks up where the [Ray Crash Course](../ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) left off. It explores the rest of the core [Ray](https://ray.io) API ([documentation](https://ray.readthedocs.io/en/latest/package-ref.html)).\n",
     "\n",
     "See the instructions in the [README](../README.md) for setting up your environment to use this tutorial.\n",
     "\n",
@@ -53,14 +57,15 @@
    "source": [
     "## Ray Core Tutorial Guide\n",
     "\n",
-    "| Lesson | Description |\n",
-    "| :----- | :---------- |\n",
-    "| [00 Overview](00-Ray-Core-Overview.ipynb) | This notebook. |\n",
-    "| [01 Why Ray?](01-Why-Ray.ipynb)  | Why was Ray created? What problems does it solve? |\n",
-    "| [02 Task Parallelism - Part1](02-Task-Parallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
-    "| [03 Task Parallelism - Part2](03-Task-Parallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
-    "| [04 Distributed State with Actors](04-Distributed-State-With-Actors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
-    "| [05 Exploring Ray API Calls](05-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional module. We'll also look at options you can pass to the API calls we've already learned. |"
+    "| #  | Lesson | Description |\n",
+    "| :- | :----- | :---------- |\n",
+    "| 00 | [Overview](00-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
+    "| 01 | [Introduction](01-Introduction.ipynb) | Start in this notebook if you want an explanation of the origin and motivations for Ray. |\n",
+    "| 02 | [Task Parallelism - Part1](02-TaskParallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
+    "| 03 | [Task Parallelism - Part2](03-TaskParallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
+    "| 04 | [Distributed State with Actors](04-DistributedStateWithActors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
+    "| 05 | [Exploring Ray API Calls](05-ExploringRayAPICalls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. We'll also look at options you can pass to the API calls we've already learned. |\n",
+    "| 06 | [Recap Tips and Tricks](06-RecapAndTipsTricks.ipynb) | The final lesson recaps what we've learned and summarizes the tips and tricks we've covered, plus adds a few more. |"
    ]
   },
   {
