--- a/ray-crash-course/00-Ray-Crash-Course-Overview.ipynb
+++ b/ray-crash-course/00-Ray-Crash-Course-Overview.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -20,7 +20,7 @@
      "data": {
       "text/html": [
        "<style>\n",
-       "table {margin-left: 0 !important;}\n",
+       "    table {margin-left: 0 !important;}\n",
        "</style>\n"
       ],
       "text/plain": [
@@ -32,9 +32,9 @@
     }
    ],
    "source": [
-    "%%html\n",
+    "%%html \n",
     "<style>\n",
-    "table {margin-left: 0 !important;}\n",
+    "    table {margin-left: 0 !important;}\n",
     "</style>"
    ]
   },
@@ -62,12 +62,19 @@
    "source": [
     "## \"Crash Course\" Tutorial Guide\n",
     "\n",
-    "| Lesson (Notebook)                                      | Description                                               |\n",
-    "| :----------------------------------------------------- | :-------------------------------------------------------- |\n",
-    "| [00 Overview](00-Ray-Crash-Course-Overview.ipynb)      | This notebook.                                            |\n",
-    "| [01 Ray Tasks](01-Ray-Crash-Course-Tasks.ipynb)        | Scaling _stateless_ work using Ray _tasks_.               |\n",
-    "| [02 Ray Actors](02-Ray-Crash-Course-Actors.ipynb)      | Scaling work with distributed _state_ using Ray _actors_. |"
+    "| #  | Lesson (Notebook)                                 | Description                                               |\n",
+    "| :- | :------------------------------------------------ | :-------------------------------------------------------- |\n",
+    "| 00 | [Overview](00-Ray-Crash-Course-Overview.ipynb)    | This notebook.                                            |\n",
+    "| 01 | [Ray Tasks](01-Ray-Crash-Course-Tasks.ipynb)      | Scaling _stateless_ work using Ray _tasks_.               |\n",
+    "| 02 | [Ray Actors](02-Ray-Crash-Course-Actors.ipynb)    | Scaling work with distributed _state_ using Ray _actors_. |"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
